--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "http": "0.0.1-security",
     "request": "^2.88.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "websocket": "^1.0.31"
   },
   "devDependencies": {},
   "description": ""
